# RMAI2020-Planning

./: LICENSE  README.md
src/laser_detection/: CMakeLists.txt  package.xml
src/laser_detection/include/laser_detection/: cost_map.h  laser_detection.h  laser_object.h  laser_save.h  laser_tracking.h
src/laser_detection/launch/: load_detection_bag.launch
src/laser_detection/map_cloud/: map_pointcloud.pcd  map_pointcloud_icra.pcd
src/laser_detection/scripts/: debug_detection.py  perception_map.py  resize_map.py
src/laser_detection/src/: cost_map_points.cpp  laser_detection.cpp  laser_object.cpp  laser_save.cpp  laser_tracking.cpp  pointcloud_save.cpp  pointcloud_sub.cpp
src/roborts_bringup/launch/: .roborts.launch.swp  multi_stage.launch  roborts.launch  roborts_localization.launch  roborts_shooting.launch  roborts_stage.launch  roborts_test.launch  roborts_tmux.launch  roborts_view.launch
src/roborts_bringup/maps/: icra2019-single.yaml  icra2019.yaml
src/roborts_bringup/rviz/: multi_roborts.rviz  roborts.rviz
src/roborts_bringup/worlds/: ICRA_3D_MAP.world  icra2019-single.world  icra2019.world  icra2019.world-double  walls_icra.world
src/roborts_costmap/: CMakeLists.txt
src/roborts_costmap/config/: costmap_parameter_config_for_global_plan.prototxt  costmap_parameter_config_for_local_plan.prototxt  detection_layer_config.prototxt  dynamic_obstacle_layer_config.prototxt  friend_layer_config.prototxt  obstacle_layer_config.prototxt
src/roborts_costmap/include/costmap/: costmap_interface.h  (+6 more)
src/roborts_costmap/proto/: costmap_parameter_setting.proto  dynamic_obstacle_layer_setting.proto  local_static_layer_setting.proto
src/roborts_costmap/src/: costmap_interface.cpp  detection_layer.cpp  dynamic_obstacle_layer.cpp  friend_layer.cpp  local_static_layer.cpp  observation_buffer.cpp  obstacle_layer.cpp  static_layer.cpp
src/roborts_decision/: CMakeLists.txt  blue_master.cpp  blue_wing.cpp  decision_node.cpp  red_master.cpp  red_wing.cpp  sel_behavior_node.cpp
src/roborts_decision/blackboard/: blackboard.h  communication.h
src/roborts_decision/config/: .decision.prototxt.swp  blue_master.prototxt  blue_wing.prototxt  red_master.prototxt  red_wing.prototxt  sel_behave.prototxt
src/roborts_decision/example_behavior/: ambush_behavior.h  attack_behavior.h  back_boot_area_behavior.h  chase_behavior.h  escape_behavior.h  goal_behavior.h  nn_behavior.h  patrol_behavior.h  reload_behavior.h  search_behavior.h  shield_behavior.h  test_behavior.h
src/roborts_decision/proto/: decision.pb.cc  decision.pb.h  decision.proto
src/roborts_localization/: localization_config.h  localization_node.cpp
src/roborts_localization/config/: localization-blue_1.yaml  localization-red_0.yaml  localization-red_1.yaml  localization-robot_0.yaml  localization.yaml
src/roborts_msgs/: CMakeLists.txt
src/roborts_msgs/msg/: AllyPose.msg  ArmorPos.msg  ArmorsPos.msg  BallCollision.msg  Distance.msg  DodgeMode.msg  FVector.msg  FusionTarget.msg  GimbalAngle.msg  GimbalInfo.msg  GimbalPID.msg  LaserTarget.msg  ShooterCmd.msg  Target.msg  TargetInfo.msg
src/roborts_msgs/srv/: ShootCmd.srv
(+12 files in other folders)
